Fix speaker images on mobile

--- a/site/styles.css
+++ b/site/styles.css
@@ -913,6 +913,7 @@ ul {
 
   .speaker__image {
     width: 3.5em;
+    height: 3.5em;
     margin-right: 1.222222em;
   }
 
